--- a/sass/global.scss
+++ b/sass/global.scss
@@ -127,6 +127,11 @@ h5 {
     display: flex;
     flex: 2;
     justify-content: space-between;
+    flex-direction: column;
+    align-items: baseline;
+    @media (min-width: $devices-min-width-md) {
+      flex-direction: row;
+    }
   }
   &__item {
     display: flex;
